mudando ( vai pfv )

--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
     <link rel="stylesheet" href="sites/styles/style.css">
 </head>
 <body>
+<!-- MENU HAMBURGUER -->
+    <div class="mobile-menu-btn">
+        <i class="fas fa-bars"></i>
+    </div>
+
     <nav id="navbar">
-        <div class="logo">GEOVANNA REGES - ADVOCACIA</div>
+        <div class="logo">GEOVANNA REGES</div>
+        
         <ul class="nav-links">
             <li><a href="#home">Início</a></li>
             <li><a href="#sobre">Sobre</a></li>
@@ -22,6 +28,7 @@
         </ul>
     </nav>
 
+    <!-- resto do seu HTML exatamente igual -->
     <section class="hero" id="home">
         <div class="hero-content">
             <h1>Geovanna Reges - Advogada</h1>
@@ -29,7 +36,6 @@
             <a href="#contato" class="cta-button">Agende uma Consulta</a>
         </div>
     </section>
-
     <section id="sobre">
     <h2 class="section-title">Sobre Mim</h2>
     <div class="sobre-content">
