acho que agora vai

--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
     <div class="contato-content">
 
         <!-- WhatsApp -->
-        <a href="https://wa.me/556292137320?text=Olá,%20vim%20pelo%20site" class="contato-item" target="_blank">
+        <a href="https://wa.me/556292137320?text=Ol%C3%A1,%20vim%20pelo%20site%20e%20gostaria%20de%20obter%20informa%C3%A7%C3%B5es%20sobre%20os%20atendimentos%20jur%C3%ADdicos."
+            class="contato-item" target="_blank">
             <div class="contato-icon"><i class="fab fa-whatsapp"></i></div>
             <div>
                 <strong>WhatsApp</strong><br>
