--- a/index.html
+++ b/index.html
@@ -37,13 +37,16 @@
 <section class="hero" id="home">
     <div class="hero-content">
         <h1>Geovanna Reges - Advogada</h1>
-        <p>Excelência em Advocacia | Justiça com Compromisso</p>
-        <a href="#contato" class="cta-button">Agende uma Consulta</a>
+        <p>Excelência em Advocacia | Justiça com Compromisso</p> 
 
-
-
+        <!-- NOVO BOTÃO DENTRO DA HERO (2025) -->
+        <a href="#contato" class="hero-cta-button">
+            <span>Agende sua Consulta</span>
+            <i class="fas fa-arrow-down"></i>
+        </a>
     </div>
 </section>
+
 
 <!-- SOBRE -->
 <section id="sobre">
@@ -147,14 +150,12 @@
 </section>
 
 <!-- CONTATO -->
-<section id="contato">
+    <section id="contato">
     <h2 class="section-title">Entre em Contato</h2>
 
     <div class="contato-content">
-
         <!-- WhatsApp -->
-        <a href="https://wa.me/556292137320?text=Ol%C3%A1,%20vim%20pelo%20site%20e%20gostaria%20de%20obter%20informa%C3%A7%C3%B5es%20sobre%20os%20atendimentos%20jur%C3%ADdicos."
-            class="contato-item" target="_blank">
+        <a href="https://wa.me/556292137320?text=Olá,%20vim%20pelo%20site" class="contato-item" target="_blank">
             <div class="contato-icon"><i class="fab fa-whatsapp"></i></div>
             <div>
                 <strong>WhatsApp</strong><br>
