agora vai ( eu acho )

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geovanna Reges - Advocacia</title>
 
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="sites/img/favicon.png">
 
     <!-- Font Awesome -->
     <link rel="stylesheet" 
